<?xml version="1.0" encoding="utf-8"?>
    <resources>

      <string name="location_item_services">-> I got the yams\r\n-> I can let the cat out the bag, pussy or otherwise!\r\n-> You want greens? Fear nothing! I am the boss chef with the best vegetables\n
      </string>
      <string name="location_item_more_information">The living legend. The one who has it all. Started from the top, now I\'m up!\r\nQuote: "Until you see me, you've never seen a bad guy bad baddam badda me!\n
      </string>
      <string name="location_item_rating">Time:\t\t\t\t5/5\r\nPrice:\t\t\t\t4/5\r\nQuality:\t\t\t\t5/5\r\nRecommendations:\t52\r\n
      </string>

    <!-- Login page strings -->
    <string name="login_header_text">LOGIN</string>
    <string name="label_login_button">Login</string>
    <string name="label_goToRegister">[ CLICK HERE TO REGISTER ]</string>
    <string name="label_login_pin">enter pin</string>
    <string name="label_login_automatically">Login Automatically</string>


    <string name="info_register_service">To be found on the app, select a service type below.</string>

    <string name="info_register_service_company_business">Established Company/Business (With office or building)</string>
    <string name="info_register_service_company_business_hint">e.g. Shop/Studio/Internet Cafe/Driving School/Salon/Club</string>

    <string name="info_register_service_small_business">Small/Medium/Home Business (Office section or outside)</string>
    <string name="info_register_service_small_business_hint">
        e.g. Mobile kitchen/Haircut/Shoe Repair/Cab/Handyman/IT guy\n
        You will always find this at the same location.
    </string>

    <string name="info_register_service_o_g_hustle">O.G. Hustle (On the block)</string>
    <string name="info_register_service_o_g_hustle_hint">
        e.g. Live Performance (or battles)/Pushing product (cigarettes, mixtapes etc.)/Luggage Assistance\n
        You own the streets! This app was made and named for you!\n
        Your hustle can be whatever you want to call it!\n
        Use whatever nickname you want to use!\n
        Place your location anywhere near you. When someone buzzes
        you on the app, you can meet wherever you have chosen.\n
    </string>

    <string name="info_register_service_none">None</string>
    <string name="info_register_service_none_hint">You can join with no service and find what you need</string>

    <!-- Register page strings -->
    <string name="register_header_text">REGISTER</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_username">Username</string>
    <string name="label_msisdn">Phone Number</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Pin</string>
    <string name="label_confirm_password">Confirm Pin</string>
    <string name="label_register_button">Register</string>
    <string name="label_continue_button">Continue</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="label_goToLogin">[ CLICK HERE TO GO TO LOGIN ]</string>

    <!-- Register page strings -->
    <string name="register_service_header_text">REGISTER A SERVICE</string>
    <string name="label_service_name">Service Name</string>
    <string name="label_service_description">Service Description</string>
    <string name="label_service_anonymity">Select Anonymity</string>

    <!-- Menu Strings -->
    <string name="menu_settings">Settings</string>

    <!-- App Strings -->
    <string name="app_name">Tha Streetz</string>
    <string name="app_settings">User Settings</string>
    <string name="map_tab_name">MAP</string>
    <string name="navigation_tab_name">NAV</string>
    <string name="startup_status">I\'m the streets look both ways before you cross me!</string>
    <string name="tab_name">Tab Name</string>
    <string name="tab_icon">Tab Icon</string>
    <string name="blaklizt_logo">Blaklizt Logo</string>
    <string name="blaklizt_website">http://www.blaklizt.net</string>

    <!-- Action titles -->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_get_location">Update Location</string>

    <!-- Google Strings -->
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Location Strings -->
    <string name="location_image">Location Image</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="marker_info_default_text">Click on a marker for more information</string>


</resources>
