<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="#000000" style="@style/LayoutParent" android:isScrollContainer="true" android:scrollbars="none">
    <io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/LayoutParent">

        <LinearLayout android:orientation="vertical" style="@style/LayoutParent">

            <ImageView style="@style/AuthHeaderLogo"/>

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="fill_parent" android:stretchColumns="1">
                <TableRow>
                    <ImageView android:id="@+id/imgRegisterServiceBack" style="@style/AuthBack"/>
                    <TextView android:id="@+id/labelRegisterServiceHeader" android:text="@string/register_service_header_text" style="@style/AuthHeaderText"/>
                    <ImageView android:id="@+id/imgRegisterServiceForward" style="@style/AuthForward"/>
                </TableRow>
            </TableLayout>

            <TextView android:textColor="#d2d2d2" android:layout_margin="15dp" android:text="@string/info_register_service" android:textSize="16sp" style="@style/AuthHeaderText"/>

            <RadioGroup android:id="@+id/registerServiceRadioGroup" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="100dp" android:layout_width="fill_parent" android:orientation="horizontal" android:weightSum="1.0">
                    <RadioButton  android:layout_weight=".5" android:text="@string/info_register_service_company_business"
                                  android:id="@+id/registerCompanyBusiness" style="@style/ServiceRadioButton" android:drawableRight="@drawable/res604"/>
                    <RadioButton  android:layout_weight=".5" android:text="@string/info_register_service_small_business"
                                  android:id="@+id/registerSmallBusiness" style="@style/ServiceRadioButton" android:drawableRight="@drawable/res614"/>
                </LinearLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="100dp" android:layout_width="fill_parent" android:orientation="horizontal" android:weightSum="1.0">
                    <RadioButton  android:layout_weight=".5" android:text="@string/info_register_service_o_g_hustle"
                                  android:id="@+id/registerOGHustle" style="@style/ServiceRadioButton"  android:drawableRight="@drawable/res911" />
                    <RadioButton  android:layout_weight=".5" android:text="@string/info_register_service_none"
                                  android:id="@+id/registerNone"  style="@style/ServiceRadioButton"  android:drawableRight="@drawable/res471"/>
                </LinearLayout>
            </RadioGroup>

            <EditText android:id="@+id/registerServiceName" android:inputType="textAutoComplete" android:hint="@string/label_service_name" android:layout_marginTop="15dp" style="@style/AuthEditText"
                      android:maxLength="50"/>

            <Button android:id="@+id/btnStart" android:text="@string/label_continue_button" style="@style/AuthButton" />

    </LinearLayout>
    </io.codetail.widget.RevealFrameLayout>
</ScrollView>