<?xml version="1.0" encoding="utf-8"?>
<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
	<!--<item android:id="@+id/action_get_location"-->
		  <!--android:icon="@android:drawable/ic_menu_compass"-->
		  <!--android:title="@string/action_get_location"-->
          <!--android:showAsAction="ifRoom" />-->
    <!--&lt;!&ndash; Search, should appear as action button &ndash;&gt;-->
    <!--<item android:id="@+id/action_search"-->
          <!--android:icon="@drawable/action_search"-->
          <!--android:title="@string/action_search"-->
          <!--android:showAsAction="ifRoom" />-->
    <!--&lt;!&ndash; Settings, should always be in the overflow &ndash;&gt;-->
    <!--<item android:id="@+id/action_settings"-->
          <!--android:title="@string/action_settings"-->
          <!--android:showAsAction="always" />-->
<!--</menu>-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_get_location"
          android:icon="@android:drawable/ic_menu_compass"
          android:title="@string/action_get_location"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_search"
          android:icon="@drawable/action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@android:drawable/ic_menu_preferences"
          android:showAsAction="ifRoom" />
</menu>